# OpenGLPrj-SuperPang

./: .gitignore  .gitmodules  ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  CMakeLists.txt  INSTALL.vcxproj  INSTALL.vcxproj.filters  OpenGLPrj.sln  OpenGLPrj.vcxproj  OpenGLPrj.vcxproj.filters  ReadMe.md  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake  game.menu  readme.txt
OpenGLPrj.dir/Debug/: OpenGLPrj.exe.recipe
OpenGLPrj.dir/Debug/OpenGLPrj.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
include/: AttackerObject.h  BallObject.h  BlockObject.h  Game.h  GameLevel.h  GameMenu.h  GameObject.h  HexagonObject.h  LadderObject.h  PlayerObject.h  PowerUpObject.h  ResourceManager.h  Shader.h  SphereRenderer.h  Sprite3DRenderer.h  SpriteRenderer.h  TextRenderer.h  Texture.h  Utility.h  WeaponObject.h
levels/: 1.level  2.level
resources/: game.menu
resources/levels/: 1.level  2.level  3.level
resources/shaders/: sphere.fs  sphere.vs
shaders/: shader.vs  sprite.fs  sprite.vs  sprite3D.fs  sprite3D.vs
src/: AttackerObject.cpp  BallObject.cpp  BlockObject.cpp  Game.cpp  GameLevel.cpp  GameMenu.cpp  GameObject.cpp  HexagonObject.cpp  LadderObject.cpp  PlayerObject.cpp  PowerUpObject.cpp  ResourceManager.cpp  Shader.cpp  SphereRenderer.cpp  Sprite3DRenderer.cpp  SpriteRenderer.cpp  TextRenderer.cpp  Texture.cpp  Utility.cpp  WeaponObject.cpp  main.cpp
x64/Debug/ALL_BUILD/: ALL_BUILD.recipe
x64/Debug/ALL_BUILD/ALL_BUILD.tlog/: ALL_BUILD.lastbuildstate  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog
x64/Debug/ZERO_CHECK/: ZERO_CHECK.recipe
x64/Debug/ZERO_CHECK/ZERO_CHECK.tlog/: CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog
